  - Fixed defect #1394 TV Series Episode names not picked up from filename
  - Fixed defect #1398 Some movie descriptions broken <br/> replaced with <br> in skin-options.xsl
  - Fixed defect #1399 Keep previously scanned movies parameter causes <cast> duplicate name
  - Fixed defect #1403 Kinopoisk plugin changes for referrer string
  - Fixed defect #1412 Sort cast/writers in alphabetic order
  - Enhancement  #1434 Option to specify different plot line break type (other then {br})
  - Fixed defect #1435 ComingSoon.IT Plugin needs changes due to new website format
  - Fixed defect #1436 Scraping of nfo-file fails for year
  - Fixed defect #1438 Proper parsing of MPAA rating by Kinopoisk plugin

MovieJukebox 1.9 (r1500)
------------------------
  - Fixed defect  #855 Year in TV series files names over rides season based year
  - Enhancement   #975 Reworking of jukebox clean up routine
  - Fixed defect  #981 Use poster.scanner.SearchPriority regardless of mjb.internet.plugin (other than IMDb)
  - Fixed defect #1013 Support for localised IMDB, e.g. (ES, FR, DE, etc)
  - Fixed defect #1155 YAMJ refuses to pickup fanart and poster for a movie
  - Enhancement  #1239 Plugin for www.comingsoon.it
  - Enhancement  #1277 Get all available IMDb information (actors, directors, genres, etc)
  - Fixed defect #1283 IMDB update for non-MPAA Certification
  - Fixed defect #1284 Comma divider missing when not all fields present in default skins
  - Fixed defect #1287 Bad extraction of TVDb id from NFO
  - Enhancement  #1282 Add movie poster FilmAffinity
  - Fixed defect #1289 Release Date or Premiered date is not being loaded from NFO file
  - Fixed defect #1290 FilmAffinity plot no longer retrieved from web site
  - Fixed defect #1293 FilmAffinity title is wrong for Spanish users
  - Enhancement  #1296 Force rescan of XML data if UNKNOWN exists, or XML is stale
  - Enhancement  #1298 List all indexes a movie appears in, in the XML
  - Fixed defect #1299 Parental controls broken